src/StateSmith/Input/antlr4/Grammar1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar1.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class Grammar1Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, LINE_ENDER=16, 
		IDENTIFIER=17, LINE_COMMENT=18, STAR_COMMENT=19, STRING=20, TICK_STRING=21, 
		DIGIT=22, PERIOD=23, COMMA=24, PLUS=25, DASH=26, COLON=27, GT=28, LT=29, 
		OTHER_SYMBOLS=30, HWS=31;
	public const int
		RULE_optional_any_space = 0, RULE_ohs = 1, RULE_some_ws = 2, RULE_node = 3, 
		RULE_statemachine_defn = 4, RULE_notes_text = 5, RULE_notes_node = 6, 
		RULE_state_behaviors = 7, RULE_ortho_defn = 8, RULE_state_defn = 9, RULE_global_id = 10, 
		RULE_state_id = 11, RULE_ortho_order = 12, RULE_edge = 13, RULE_edge_behaviors = 14, 
		RULE_nl_behaviors = 15, RULE_nl_behavior = 16, RULE_point_label = 17, 
		RULE_entry_point = 18, RULE_exit_point = 19, RULE_transition_via = 20, 
		RULE_behavior = 21, RULE_order = 22, RULE_triggers = 23, RULE_trigger_id = 24, 
		RULE_trigger_list = 25, RULE_guard = 26, RULE_guard_code = 27, RULE_action = 28, 
		RULE_action_code = 29, RULE_naked_action_code = 30, RULE_member_access_operator = 31, 
		RULE_member_access = 32, RULE_expandable_identifier = 33, RULE_group_expression = 34, 
		RULE_square_brace_expression = 35, RULE_braced_expression = 36, RULE_line_comment = 37, 
		RULE_star_comment = 38, RULE_function_args = 39, RULE_function_arg_code = 40, 
		RULE_function_arg = 41, RULE_leading_optional_any_space = 42, RULE_trailing_optional_any_space = 43, 
		RULE_braced_function_args = 44, RULE_expandable_function_call = 45, RULE_member_function_call = 46, 
		RULE_any_code = 47, RULE_code_element = 48, RULE_naked_action_code_elements = 49, 
		RULE_code_line_element = 50, RULE_code_line = 51, RULE_line_end_with_hs = 52, 
		RULE_number = 53, RULE_string = 54, RULE_code_symbol = 55;
	public static readonly string[] ruleNames = {
		"optional_any_space", "ohs", "some_ws", "node", "statemachine_defn", "notes_text", 
		"notes_node", "state_behaviors", "ortho_defn", "state_defn", "global_id", 
		"state_id", "ortho_order", "edge", "edge_behaviors", "nl_behaviors", "nl_behavior", 
		"point_label", "entry_point", "exit_point", "transition_via", "behavior", 
		"order", "triggers", "trigger_id", "trigger_list", "guard", "guard_code", 
		"action", "action_code", "naked_action_code", "member_access_operator", 
		"member_access", "expandable_identifier", "group_expression", "square_brace_expression", 
		"braced_expression", "line_comment", "star_comment", "function_args", 
		"function_arg_code", "function_arg", "leading_optional_any_space", "trailing_optional_any_space", 
		"braced_function_args", "expandable_function_call", "member_function_call", 
		"any_code", "code_element", "naked_action_code_elements", "code_line_element", 
		"code_line", "line_end_with_hs", "number", "string", "code_symbol"
	};

	private static readonly string[] _LiteralNames = {
		null, "'$STATEMACHINE'", "'$NOTES'", "'$ORTHO'", "'#'", "'entry'", "'exit'", 
		"'via'", "'('", "')'", "'['", "']'", "'/'", "'{'", "'}'", "'e'", null, 
		null, null, null, null, null, null, "'.'", "','", "'+'", "'-'", "':'", 
		"'>'", "'<'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "LINE_ENDER", "IDENTIFIER", "LINE_COMMENT", "STAR_COMMENT", 
		"STRING", "TICK_STRING", "DIGIT", "PERIOD", "COMMA", "PLUS", "DASH", "COLON", 
		"GT", "LT", "OTHER_SYMBOLS", "HWS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static Grammar1Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Grammar1Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Grammar1Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Optional_any_spaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] HWS() { return GetTokens(Grammar1Parser.HWS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HWS(int i) {
			return GetToken(Grammar1Parser.HWS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Line_end_with_hsContext[] line_end_with_hs() {
			return GetRuleContexts<Line_end_with_hsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Line_end_with_hsContext line_end_with_hs(int i) {
			return GetRuleContext<Line_end_with_hsContext>(i);
		}
		public Optional_any_spaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optional_any_space; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterOptional_any_space(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitOptional_any_space(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptional_any_space(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Optional_any_spaceContext optional_any_space() {
		Optional_any_spaceContext _localctx = new Optional_any_spaceContext(Context, State);
		EnterRule(_localctx, 0, RULE_optional_any_space);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 114;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case HWS:
						{
						State = 112;
						Match(HWS);
						}
						break;
					case LINE_ENDER:
						{
						State = 113;
						line_end_with_hs();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 118;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OhsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HWS() { return GetToken(Grammar1Parser.HWS, 0); }
		public OhsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ohs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterOhs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitOhs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOhs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OhsContext ohs() {
		OhsContext _localctx = new OhsContext(Context, State);
		EnterRule(_localctx, 2, RULE_ohs);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 119;
				Match(HWS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Some_wsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] HWS() { return GetTokens(Grammar1Parser.HWS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HWS(int i) {
			return GetToken(Grammar1Parser.HWS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_ENDER() { return GetTokens(Grammar1Parser.LINE_ENDER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_ENDER(int i) {
			return GetToken(Grammar1Parser.LINE_ENDER, i);
		}
		public Some_wsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_some_ws; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterSome_ws(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitSome_ws(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSome_ws(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Some_wsContext some_ws() {
		Some_wsContext _localctx = new Some_wsContext(Context, State);
		EnterRule(_localctx, 4, RULE_some_ws);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 122;
					_la = TokenStream.LA(1);
					if ( !(_la==LINE_ENDER || _la==HWS) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 125;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Notes_nodeContext notes_node() {
			return GetRuleContext<Notes_nodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Exit_pointContext exit_point() {
			return GetRuleContext<Exit_pointContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Entry_pointContext entry_point() {
			return GetRuleContext<Entry_pointContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_defnContext state_defn() {
			return GetRuleContext<State_defnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Ortho_defnContext ortho_defn() {
			return GetRuleContext<Ortho_defnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Statemachine_defnContext statemachine_defn() {
			return GetRuleContext<Statemachine_defnContext>(0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterNode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitNode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NodeContext node() {
		NodeContext _localctx = new NodeContext(Context, State);
		EnterRule(_localctx, 6, RULE_node);
		try {
			State = 133;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127;
				notes_node();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128;
				exit_point();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129;
				entry_point();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 130;
				state_defn();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 131;
				ortho_defn();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 132;
				statemachine_defn();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statemachine_defnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Optional_any_spaceContext[] optional_any_space() {
			return GetRuleContexts<Optional_any_spaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Optional_any_spaceContext optional_any_space(int i) {
			return GetRuleContext<Optional_any_spaceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OhsContext[] ohs() {
			return GetRuleContexts<OhsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OhsContext ohs(int i) {
			return GetRuleContext<OhsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(Grammar1Parser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(Grammar1Parser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(Grammar1Parser.Eof, 0); }
		public Statemachine_defnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statemachine_defn; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterStatemachine_defn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitStatemachine_defn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatemachine_defn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statemachine_defnContext statemachine_defn() {
		Statemachine_defnContext _localctx = new Statemachine_defnContext(Context, State);
		EnterRule(_localctx, 8, RULE_statemachine_defn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			optional_any_space();
			State = 136;
			Match(T__0);
			State = 137;
			ohs();
			State = 138;
			Match(COLON);
			State = 139;
			ohs();
			State = 140;
			Match(IDENTIFIER);
			State = 141;
			optional_any_space();
			State = 142;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Notes_textContext : ParserRuleContext {
		public Notes_textContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notes_text; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterNotes_text(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitNotes_text(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotes_text(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Notes_textContext notes_text() {
		Notes_textContext _localctx = new Notes_textContext(Context, State);
		EnterRule(_localctx, 10, RULE_notes_text);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 147;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 144;
					MatchWildcard();
					}
					} 
				}
				State = 149;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Notes_nodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Optional_any_spaceContext optional_any_space() {
			return GetRuleContext<Optional_any_spaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(Grammar1Parser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Some_wsContext some_ws() {
			return GetRuleContext<Some_wsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Notes_textContext notes_text() {
			return GetRuleContext<Notes_textContext>(0);
		}
		public Notes_nodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notes_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.EnterNotes_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammar1Listener typedListener = listener as IGrammar1Listener;
			if (typedListener != null) typedListener.ExitNotes_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammar1Visitor<TResult> typedVisitor = visitor as IGrammar1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotes_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Notes_nodeContext notes_node() {
		Notes_nodeContext _localctx = new Notes_nodeContext(Context, State);
		EnterRule(_localctx, 12, RULE_notes_node);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			optional_any_space();
			State = 151;
			Match(T__1);
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LINE_ENDER || _la==HWS) {
				{
				State = 152;
				some_ws();
				State = 153;
				notes_text();
				}
			}

			State = 157;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
